# P1P2_HBS_USBCdc_Modem

./: .gitignore  .gitmodules  Readme.md
doc/: handbook.md
kicad/: LM4861.dcm  LM4861.lib  MAX22088.dcm  MAX22088.lib  fp-info-cache  p1p2_pi_hat-cache.lib  p1p2_pi_hat.kicad_pro  p1p2_pi_hat.kicad_sch  p1p2_rs232_receiver-cache.lib  p1p2_rs232_receiver.kicad_pcb  p1p2_rs232_receiver.kicad_pro  p1p2_rs232_receiver.kicad_sch  p1p2_rs232_receiver.pro  p1p2_rs232_receiver.sch  sym-lib-table
kicad/B82790C0.pretty/: L_CommonMode_TDK_B82790C0.kicad_mod
kicad/doc/: circuits.md  clicks.md
pico/: CMakeLists.txt  Readme.md
pico/doc/: ADC.md  Pio0.md  Pio1.md  leds.md  uart.md
pico/src/: CMakeLists.txt  adc.cpp  adc.hpp  adc_sw.cpp  adc_sw.hpp  channel_comp.cpp  channel_comp.hpp  circular_buffer.hpp  circular_buffer_spinlock.hpp  dcblock.cpp  dcblock.hpp  defines.hpp  fifo_irqsafe.hpp  fir_filter.cpp  fir_filter.hpp  gain.cpp  gain.hpp  host_uart.cpp  host_uart.hpp  led_driver.hpp  led_manager.hpp  level_detect.hpp  line_busy.hpp  line_receiver.hpp  line_receiver_irqsafe.hpp  main.cpp  message.cpp  message.hpp  p1p2_uart_tx.pio  resample.hpp  shiftreg.hpp  standalone.cpp  standalone.hpp  twos_complement.pio  tx_state.hpp  tx_statemachine.hpp  uart.cpp  uart.hpp  uart_bit_detect.hpp  uart_bit_detect_fast.cpp  (+5 more)
pico/tests/: CMakeLists.txt  channel_comp_test.cpp  circularbuffer_test.cpp  dc_block_test.cpp  fifo_test.cpp  firfilter_test.cpp  gain_test.cpp  linereceiver_test.cpp  message_test.cpp  resample_test.cpp  shiftreg_test.cpp  test_main.cpp  tx_statemachine_test.cpp  uart_bit_detect_test.cpp  uart_test.cpp
pico/tests/hardware/: sync.h
pico/tests/pico/: types.h
